Significantly increase Nullable annotation coverage and apply a few deprecations